--- a/info.yaml
+++ b/info.yaml
@@ -8,7 +8,6 @@ project:
   source_files:
     - ros_nand4.v
     - ros_nand4_cap.v
-    - ros_nand2_sub.v
     - ros_einv_sub.v
     - fmeasurment.v
     - tt_um_gfg_development_tros.v
@@ -28,25 +27,62 @@ documentation:
   author:       "Gerrit Grutzeck"      # Your name
   title:        "TROS"      # Project title
   language:     "Verilog" # other examples include Verilog, Amaranth, VHDL, etc
-  description:  ""      # Short description of what your project does
+  description:  "Three different ring oscillator, with different temperature dependence"      # Short description of what your project does
 
 # Longer description of how the project works. You can use standard markdown format.
-  how_it_works:
+  how_it_works: |
+      This design implements three different ring oscillators. The first one is a basic NAND 
+      based oscillator. The second one adds additional NAND gates to the outputs of the stages
+      of the oscillator to increase the capacitve loading. The last one uses the tri-state
+      inverts with a sub-threshold tri-state enable. 
+
+      For measuring the frequencies each oscillator is driving a counter. This counters are
+      latched with the latch counter input. With the input transfer counter the currently 
+      selected counter (counter select bits) is transfered via the serial data stream. The 
+      transfer is driven by the clock of the design. As encoding a manchester encoding is used. 
+
+      Furthermore, a divided version of the clock of each oscillator is outputted. The divisior
+      can be configured with the frequency selection bits. 
 
 # Instructions on how someone could test your project, include things like what buttons do what and how to set the clock if needed
-  how_to_test:
+  how_to_test: |
+      TODO
 
 # A description of what the inputs do (e.g. red button, SPI CLK, SPI MOSI, etc).
-  inputs:               
+  inputs: 
+    - latch counter
+    - counter reset
+    - transfer counter
+    - counter select bit 0
+    - counter select bit 1
+    - select latch counter (sync/async)
+    - frequency divider select bit 0
+    - frequency divider select bit 1      
 
 # A description of what the outputs do (e.g. status LED, SPI MISO, etc)
   outputs:
+    - serial data stream
+    - not used
+    - not used
+    - not used
+    - not used
+    - divided clock of oscillator 0
+    - divided clock of oscillator 1
+    - divided clock of oscillator 2
 
 # A description of what the bidirectional I/O pins do (e.g. I2C SDA, I2C SCL, etc)
   bidirectional:
+    - not used
+    - not used
+    - not used
+    - not used
+    - not used
+    - not used
+    - not used
+    - not used
 
 # The following fields are optional
-  tag:          "timer, test"      # comma separated list of tags: test, encryption, experiment, clock, animation, utility, industrial, pwm, fpga, alu, microprocessor, risc, riscv, sensor, signal generator, fft, filter, music, bcd, sound, serial, timer, random number generator, calculator, decoder, counter, puzzle, multiplier, game, oscillator,
+  tag:          "oscillator, test"      # comma separated list of tags: test, encryption, experiment, clock, animation, utility, industrial, pwm, fpga, alu, microprocessor, risc, riscv, sensor, signal generator, fft, filter, music, bcd, sound, serial, timer, random number generator, calculator, decoder, counter, puzzle, multiplier, game, oscillator,
   external_hw:  ""      # Describe any external hardware needed
   discord:      "liggi.iggil"      # Your discord handle, used for communication and automatically assigning tapeout role after a submission
   doc_link:     ""      # URL to longer form documentation, eg the README.md in your repository
